[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/EndScreen.gd" type="Script" id=1]
[ext_resource path="res://Font/vanilla whale.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="EndScreen" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Round" type="Label" parent="CenterContainer"]
margin_left = 512.0
margin_top = 52.0
margin_right = 512.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 256.0
margin_top = 232.0
margin_right = 768.0
margin_bottom = 521.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "RestarT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InitialPage" type="Button" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 512.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 2 )
text = "MenU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 512.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "ExiT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/InitialPage" to="." method="_on_InitialPage_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
